--- a/pokemonDataTable_1.html
+++ b/pokemonDataTable_1.html
@@ -45,7 +45,7 @@
 </tbody>
 </table>
 	<!-- Learned HTML and Tables  -->
-
+	<!-- Chris Puncekar | Web Developer Bootcamp | All Rights Reserved for Educational Purposes Only -->
 	<footer>
   <p>Chris Puncekar | The Web Developer Bootcamp | Udemy | All Rights Reserved for Educational Purposes Only </p>
 </footer>
