--- a/pokemonDataTable_1.html
+++ b/pokemonDataTable_1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<!-- The Problem - Need a data table for Pokemon Chart| Recreate a simple Web Page in HTML without using CSS -->
+	<!-- The Problem - Need a new data table for Pokemon Chart| Recreate a simple Web Page in HTML without using CSS -->
 	<!-- More info on Web Developer Bootcamp by Colt Steele (https://www.udemy.com/the-web-developer-bootcamp/)-->
 
 
