--- a/pokemonDataTable_1.html
+++ b/pokemonDataTable_1.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Pokemon Data</title>
 	<!-- Chris Puncekar | Web Developer Bootcamp | All Rights Reserved for Educational Purposes Only -->
+	<!-- Web Developer Bootcamp from Colt Steel -->
 
 </head>
 <body>
