--- a/pokemonDataTable_1.html
+++ b/pokemonDataTable_1.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Pokemon Data</title>
 	<!-- Chris Puncekar | Web Developer Bootcamp | All Rights Reserved for Educational Purposes Only -->
-	<!-- Bootcamp -->
+	<!-- Bootcamp || Taking Notes from this -->
 	<!-- Web Developer Bootcamp from Colt Steel -->
 
 </head>
